<resources>
    <string name="app_name">To Do List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcomeMsgStr">Welcome to The app</string>
    <string name="usernameStr">. . .</string>
    <string name="Input_hint">Enter your name</string>
    <string name="welcomepageBTN">Save</string>
    <string name="hint_name_edit">Enter your name</string>
    <string name="eventTitleText">Title</string>
    <string name="StartText">Starts</string>
    <string name="EndsTesxt">Ends</string>
    <string name="to_do_list">To Do List</string>
    <string name="button">Button</string>
    <string name="Category_ColorText">Color</string>
</resources>